Fixed bug #31755 (Cannot create SOAP header in no namespace)